# saytype

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
sidecar/: build.sh  requirements.txt  transcribe-server.spec  transcribe_server.py
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_nap.rs  audio.rs  config.rs  hotkey.rs  lib.rs  main.rs  sidecar.rs  text_insertion.rs  tray.rs
src/components/: Onboarding.tsx  Settings.tsx
src/hooks/: useRecording.ts
